Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15573 closed bug (fixed)

acer aspire one - i945gma video - black screen regression

Reported by: AlienSoldier Owned by: pulkomandy
Priority: critical Milestone: R1/beta2
Component: Drivers/Graphics/intel_extreme Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Updating from a revision of 6 dec 2919 to hrev53640, the screen stay black after the haiku launch icon are finished. That update was followed by a previous update that did not finish (that happen all the time when using wifi or my other isp slower internet connection).

I don't know if the problem compounded from a previous weird thing i have for many months (it worked at one point of that problem was lasting only micro sec that i never noticed). The LCD screen lose it's polarization usually just after the haiku launch icon are done. When that happen the screen fall in complete analog unset state and become white-ish (like ice formation in accelerate). Then it become a shade of black as the LCD is used again, then mere second after, another shade of black is noticeable (like a resolution change perhaps). From there before the screen turn blue and the desktop appear but now it stay black. The desktop feel present because pressing the mouse button make the disk led flash once.

I added the syslog of one boothing session.

version gcc2 hybrid.

Attachments (2)

syslog (159.3 KB ) - added by AlienSoldier 5 years ago.
syslog of the black screen boot problem
syslog hrev53595 (169.8 KB ) - added by AlienSoldier 5 years ago.
syslog hrev53595

Download all attachments as: .zip

Change History (8)

by AlienSoldier, 5 years ago

Attachment: syslog added

syslog of the black screen boot problem

comment:1 by diver, 5 years ago

Component: Audio & VideoDrivers/Graphics/intel_extreme
Keywords: black screen removed
Owner: changed from nobody to pulkomandy
Platform: x86All
Status: newassigned

comment:2 by pulkomandy, 5 years ago

It would be very helpful to know the last hrev you tried which worked, and a syslog from such a working boot for comparison, as well.

by AlienSoldier, 5 years ago

Attachment: syslog hrev53595 added

syslog hrev53595

comment:3 by AlienSoldier, 5 years ago

The last one i have that boot without a black screen is hrev53595, syslog of that boot session attached.

comment:4 by AlienSoldier, 5 years ago

i udpated to 53658 just to see if the problem of the last update played any role and it does not. The update got in fine as i used my ethernet cable this time, still a black screen.

comment:5 by pulkomandy, 5 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev53661. Thanks for the before/after syslogs and narrow revision range, it helps a lot.

comment:6 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.